// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🚀 Cleanup Components/Tabs/Tabs More Menu Tabs 1`] = `
Array [
  .c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
      size="small"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
            data-tab-key=".$0"
            data-tab-origin-index={0}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 0
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$1"
            data-tab-origin-index={1}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 1
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$2"
            data-tab-origin-index={2}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 2
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$3"
            data-tab-origin-index={3}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 3
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$4"
            data-tab-origin-index={4}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 4
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$5"
            data-tab-origin-index={5}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 5
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$6"
            data-tab-origin-index={6}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 6
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$7"
            data-tab-origin-index={7}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 77777777
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$8"
            data-tab-origin-index={8}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 8
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$9"
            data-tab-origin-index={9}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 9
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          className="PrivateTabIndicator-root-374 PrivateTabIndicator-colorPrimary-375 MuiTabs-indicator RcTabs-indicator"
          style={
            Object {
              "left": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
  </div>,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  .c0 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
  border-radius: 4px;
  min-width: 96px;
  min-height: 36px;
  padding: 0px 16px;
}

.c0 .RcButton-startIcon {
  margin-right: 8px;
}

.c0 .RcButton-endIcon {
  margin-left: 8px;
}

.c0.RcButton-text {
  color: #066FAC;
}

.c0.RcButton-text.RcButton-disabled {
  color: #C7C7C7;
}

.c0.RcButton-contained {
  color: #fff;
  background-color: #066FAC;
}

.c0.RcButton-contained.RcButton-disabled {
  background-color: #E5E5E5;
  color: #939393;
}

.c0.RcButton-outlined {
  color: #066FAC;
  border-color: #066FAC;
  padding: 0px 15px;
}

.c0.RcButton-outlined.RcButton-disabled {
  color: #C7C7C7;
  border-color: #C7C7C7;
}

@media (hover:hover) and (pointer:fine) {
  .c0.RcButton-text:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c0.RcButton-contained:hover {
    background-color: rgba(6,111,172,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c0.RcButton-outlined:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

<div
    className="MuiBox-root MuiBox-root-378"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Add Tab head
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <br />
    <br />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Remove Tab head
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <br />
    <br />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Add Tab tail
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <br />
    <br />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        change Tab size
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>,
]
`;

exports[`Storyshots 🚀 Cleanup Components/Tabs/Tabs Tabs 1`] = `
.c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

<div
  className="MuiPaper-root MuiPaper-elevation1"
>
  <div
    className="MuiTabs-root c0"
  >
    <div
      className="MuiTabs-scroller MuiTabs-fixed"
      onScroll={[Function]}
      style={
        Object {
          "marginBottom": null,
          "overflow": "hidden",
        }
      }
    >
      <div
        className="MuiTabs-flexContainer"
        onKeyDown={[Function]}
        role="tablist"
      >
        <button
          aria-selected={true}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 1
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 2
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 3
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 4
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 5
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-disabled Mui-disabled"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 6
          </span>
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 7
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-selected={false}
          className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="tab"
          size="small"
          tabIndex={-1}
          type="button"
        >
          <span
            className="MuiTab-wrapper RcTab-wrapper"
          >
            Tab 8
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        className="PrivateTabIndicator-root-357 PrivateTabIndicator-colorPrimary-358 MuiTabs-indicator RcTabs-indicator"
        style={
          Object {
            "left": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots 🚀 Cleanup Components/Tabs/Tabs Tabs Custom Example 1`] = `
Array [
  .c0 {
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
}

<p
    className="MuiTypography-root c0 MuiTypography-gutterBottom"
    data-color="initial"
    data-variant="body1"
  >
    Through the resize window, observe the change of the badge on the more button. (variant="moreMenu")
  </p>,
  .c3 .RcBadge-badge {
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
  padding: 0;
  position: unset;
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c3 .RcBadge-badge.RcBadge-invisible {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c4 .RcBadge-badge {
  color: #FFFFFF;
  background-color: #FF8800;
  height: 18px;
  min-width: 18px;
  position: unset;
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c4 .RcBadge-badge.RcBadge-invisible {
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c2 {
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
}

.c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c1 .RcTab-wrapper {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1.RcTab-labelIcon .RcTab-wrapper > *:first-child {
  margin-bottom: unset;
  margin-right: 6px;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
      size="small"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
            data-tab-key=".$tab-0"
            data-tab-origin-index={0}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                className="MuiTypography-root c2"
                data-color="initial"
                data-variant="body1"
              >
                Tab 0
              </span>
              <span
                className="MuiBadge-root c3"
              >
                <span
                  className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
                >
                  7
                </span>
              </span>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$tab-1"
            data-tab-origin-index={1}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                className="MuiTypography-root c2"
                data-color="initial"
                data-variant="body1"
              >
                Tab 1
              </span>
              <span
                className="MuiBadge-root c3"
              >
                <span
                  className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible RcBadge-invisible"
                >
                  0
                </span>
              </span>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$tab-2"
            data-tab-origin-index={2}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                className="MuiTypography-root c2"
                data-color="initial"
                data-variant="body1"
              >
                Tab 2
              </span>
              <span
                className="MuiBadge-root c4"
              >
                <span
                  className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
                >
                  54
                </span>
              </span>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$tab-3"
            data-tab-origin-index={3}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                className="MuiTypography-root c2"
                data-color="initial"
                data-variant="body1"
              >
                Tab 3
              </span>
              <span
                className="MuiBadge-root c4"
              >
                <span
                  className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
                >
                  72
                </span>
              </span>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$tab-4"
            data-tab-origin-index={4}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              <span
                className="MuiTypography-root c2"
                data-color="initial"
                data-variant="body1"
              >
                Tab 4
              </span>
              <span
                className="MuiBadge-root c3"
              >
                <span
                  className="MuiBadge-badge RcBadge-badge MuiBadge-anchorOriginTopRightRectangle"
                >
                  2
                </span>
              </span>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          className="PrivateTabIndicator-root-366 PrivateTabIndicator-colorPrimary-367 MuiTabs-indicator RcTabs-indicator"
          style={
            Object {
              "left": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots 🚀 Cleanup Components/Tabs/Tabs Tabs Example 1`] = `
Array [
  .c0 {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<p
    className="MuiTypography-root c0 MuiTypography-gutterBottom"
    data-color="neutral.f06"
    data-variant="body2"
  >
    variant = "standard"
  </p>,
  .c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
            data-test-automation-id="tab-test-0"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 0
            </span>
            <span
              className="PrivateTabIndicator-root-361 PrivateTabIndicator-colorPrimary-362 MuiTabs-indicator RcTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 1
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-2"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 2
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-3"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 3
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-4"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 4
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-disabled Mui-disabled"
            data-test-automation-id="tab-test-5"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 5
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-6"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 6
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-7"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 77777777
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-8"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 8
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-9"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 9
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  .c0 {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<p
    className="MuiTypography-root c0 MuiTypography-gutterBottom"
    data-color="neutral.f06"
    data-variant="body2"
  >
    variant = "scrollable"
  </p>,
  .c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
    >
      <div
        className="MuiTabs-scrollable"
        style={
          Object {
            "height": 99,
            "overflow": "scroll",
            "position": "absolute",
            "top": -9999,
            "width": 99,
          }
        }
      />
      <div
        className="MuiTabs-scroller MuiTabs-scrollable"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
            data-test-automation-id="tab-test-0"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 0
            </span>
            <span
              className="PrivateTabIndicator-root-361 PrivateTabIndicator-colorPrimary-362 MuiTabs-indicator RcTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 1
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-2"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 2
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-3"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 3
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-4"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 4
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-disabled Mui-disabled"
            data-test-automation-id="tab-test-5"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 5
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-6"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 6
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-7"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 77777777
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-8"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 8
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-test-automation-id="tab-test-9"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 9
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  .c0 {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<p
    className="MuiTypography-root c0 MuiTypography-gutterBottom"
    data-color="neutral.f06"
    data-variant="body2"
  >
    variant = "fullWidth"
  </p>,
  .c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected MuiTab-fullWidth"
            data-test-automation-id="tab-test-0"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 0
            </span>
            <span
              className="PrivateTabIndicator-root-361 PrivateTabIndicator-colorPrimary-362 MuiTabs-indicator RcTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 1
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-2"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 2
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-3"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 3
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-4"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 4
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-disabled MuiTab-fullWidth Mui-disabled"
            data-test-automation-id="tab-test-5"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 5
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-6"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 6
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-7"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 77777777
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-8"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 8
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 MuiTab-fullWidth"
            data-test-automation-id="tab-test-9"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 9
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  .c0 {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<p
    className="MuiTypography-root c0 MuiTypography-gutterBottom"
    data-color="neutral.f06"
    data-variant="body2"
  >
    variant = "moreMenu"
  </p>,
  .c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
      size="small"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
            data-tab-key=".$Tab 0"
            data-tab-origin-index={0}
            data-test-automation-id="tab-test-0"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 0
            </span>
            <span
              className="PrivateTabIndicator-root-361 PrivateTabIndicator-colorPrimary-362 MuiTabs-indicator RcTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 1"
            data-tab-origin-index={1}
            data-test-automation-id="tab-test-1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 1
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 2"
            data-tab-origin-index={2}
            data-test-automation-id="tab-test-2"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 2
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 3"
            data-tab-origin-index={3}
            data-test-automation-id="tab-test-3"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 3
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 4"
            data-tab-origin-index={4}
            data-test-automation-id="tab-test-4"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 4
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-disabled Mui-disabled"
            data-tab-key=".$Tab 5"
            data-tab-origin-index={5}
            data-test-automation-id="tab-test-5"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 5
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 6"
            data-tab-origin-index={6}
            data-test-automation-id="tab-test-6"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 6
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 77777777"
            data-tab-origin-index={7}
            data-test-automation-id="tab-test-7"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 77777777
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 8"
            data-tab-origin-index={8}
            data-test-automation-id="tab-test-8"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 8
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 9"
            data-tab-origin-index={9}
            data-test-automation-id="tab-test-9"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 9
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  .c0 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
  border-radius: 4px;
  min-width: 96px;
  min-height: 36px;
  padding: 0px 16px;
}

.c0 .RcButton-startIcon {
  margin-right: 8px;
}

.c0 .RcButton-endIcon {
  margin-left: 8px;
}

.c0.RcButton-text {
  color: #066FAC;
}

.c0.RcButton-text.RcButton-disabled {
  color: #C7C7C7;
}

.c0.RcButton-contained {
  color: #fff;
  background-color: #066FAC;
}

.c0.RcButton-contained.RcButton-disabled {
  background-color: #E5E5E5;
  color: #939393;
}

.c0.RcButton-outlined {
  color: #066FAC;
  border-color: #066FAC;
  padding: 0px 15px;
}

.c0.RcButton-outlined.RcButton-disabled {
  color: #C7C7C7;
  border-color: #C7C7C7;
}

@media (hover:hover) and (pointer:fine) {
  .c0.RcButton-text:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c0.RcButton-contained:hover {
    background-color: rgba(6,111,172,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c0.RcButton-outlined:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

<div
    className="MuiBox-root MuiBox-root-365"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Add Tab
      </span>
    </button>
  </div>,
]
`;

exports[`Storyshots 🚀 Cleanup Components/Tabs/Tabs Tabs With Dynamic Children 1`] = `
Array [
  .c1 {
  text-transform: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  min-height: 32px;
  min-width: 32px;
}

.c1.RcTab-selected {
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
}

.c0 {
  min-height: auto;
}

.c0 .RcTabs-indicator {
  background-color: #066FAC;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<div
    className="MuiPaper-root MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root c0"
      size="small"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-selected RcTab-selected"
            data-tab-key=".$Tab 0"
            data-tab-origin-index={0}
            data-test-automation-id="tab-test-0"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 0-0
            </span>
            <span
              className="PrivateTabIndicator-root-370 PrivateTabIndicator-colorPrimary-371 MuiTabs-indicator RcTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 1"
            data-tab-origin-index={1}
            data-test-automation-id="tab-test-1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 1-0
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 2"
            data-tab-origin-index={2}
            data-test-automation-id="tab-test-2"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 2-0
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 3"
            data-tab-origin-index={3}
            data-test-automation-id="tab-test-3"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 3-0
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 4"
            data-tab-origin-index={4}
            data-test-automation-id="tab-test-4"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 4-0
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1 Mui-disabled Mui-disabled"
            data-tab-key=".$Tab 5"
            data-tab-origin-index={5}
            data-test-automation-id="tab-test-5"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 5-0
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 6"
            data-tab-origin-index={6}
            data-test-automation-id="tab-test-6"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 6-0
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 77777777"
            data-tab-origin-index={7}
            data-test-automation-id="tab-test-7"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 77777777-0
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 8"
            data-tab-origin-index={8}
            data-test-automation-id="tab-test-8"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 8-0
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary c1"
            data-tab-key=".$Tab 9"
            data-tab-origin-index={9}
            data-test-automation-id="tab-test-9"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            size="small"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper RcTab-wrapper"
            >
              Tab 9-0
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  .c0 {
  text-transform: none;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  text-align: center;
  box-shadow: unset;
  border-radius: 4px;
  min-width: 96px;
  min-height: 36px;
  padding: 0px 16px;
}

.c0 .RcButton-startIcon {
  margin-right: 8px;
}

.c0 .RcButton-endIcon {
  margin-left: 8px;
}

.c0.RcButton-text {
  color: #066FAC;
}

.c0.RcButton-text.RcButton-disabled {
  color: #C7C7C7;
}

.c0.RcButton-contained {
  color: #fff;
  background-color: #066FAC;
}

.c0.RcButton-contained.RcButton-disabled {
  background-color: #E5E5E5;
  color: #939393;
}

.c0.RcButton-outlined {
  color: #066FAC;
  border-color: #066FAC;
  padding: 0px 15px;
}

.c0.RcButton-outlined.RcButton-disabled {
  color: #C7C7C7;
  border-color: #C7C7C7;
}

@media (hover:hover) and (pointer:fine) {
  .c0.RcButton-text:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c0.RcButton-contained:hover {
    background-color: rgba(6,111,172,0.92);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c0.RcButton-outlined:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

<button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained RcButton-contained c0"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      click
    </span>
  </button>,
]
`;
